# finance

./: .env  .gitignore  Cargo.toml  ToDo.md
configs/: http.yaml  postgres.yaml
deploy/: docker-compose.yaml
migrations/: 20230123084203_create_transaction_table.sql
scripts/: init_db.sh
src/: app.rs  config.rs  http_server.rs  lib.rs  main.rs
src/configuration/: app.rs  http.rs  logger.rs  mod.rs  postgres.rs
src/handlers/: mod.rs  transactions.rs
src/store/: mod.rs  store.rs
src/store/postgres/: mod.rs  postgresdb.rs  transaction.rs
src/telemetry/: logging.rs
src/transactions/: create.rs  entity.rs  mod.rs
tests/: health_check.rs  transactions.rs
tests/common/: mod.rs
