[package]
name = "finance"
version = "0.1.0"
edition = "2021"
authors = ["Alexey Petrov"]

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "finance"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0", features = ["derive"] }
config = { version = "0.13", default-features = false, features = ["yaml"] }

[dev-dependencies]
reqwest = { version = "0.11", features = ["json"] }